<resources>
    <string name="app_name">JMMD Application</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="jmmd_language_learner">JMMD Language Learner</string>
    <string name="language_learner_account_sign_up">Language Learner Account Sign Up</string>
    <string name="enter_password_again">Enter New Password Again</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="my_overall_progress">My Overall Progress</string>
    <string name="sample_french_challenge">French \n Challenge 1/15 \n Progress 15%</string>
    <string name="sample_spanish_challenge">Spanish \n Challenge 4/15 \n Progress 55%</string>
    <string name="Sample_Spanish_2">Spanish \n Challenge 5/15 \n Progress 0%</string>
    <string name="temporary_username">Temporary UserName</string>
    <string name="add_a_challenge">Add a Challenge</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="add_challenges">Add Challenges</string>
    <string name="enter_language">Enter Language</string>
    <string name="search">Search</string>
    <string name="challenges">Challenges</string>
    <string name="back">Back</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_will_go_here">Challenge will go here</string>
    <string name="french_n_challenge_1_15_n_press_to_add_to_current_tasks">French \n Challenge 1/15\n Press to add to current tasks</string>
    <string name="my_challenges">My Challenges</string>
    <string name="account_deletion_and_creation">Account Deletion</string>
    <string name="delete_account">Delete Account</string>
    <string name="settingimage">SettingImage</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="edit_users">Edit Users</string>
    <string name="admin_edit_title">Edit Users</string>
    <string name="username">Username</string>
    <string name="progress_0">Progress: 0%</string>
    <string name="challenges_0">Challenges: 0</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="multiple_choice_challenge">Multiple Choice Challenge</string>
    <string name="write_in_challenge">Write-In Challenge</string>
    <string name="choose_the_format_for_your_challenge">Choose the format for your challenge</string>
    <string name="challenge_description">Challenge Description</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="question">Question</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string name="submit">Submit</string>
    <string name="please_type_a_language_and_click_search">Please type a language and click search</string>
</resources>