<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adminpage"
    android:background="@color/white">
    <TextView
        android:id="@+id/adminPage_Header"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/account_deletion_and_creation"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="34dp"
        android:layout_marginTop="45dp"
        />
    <EditText
        android:id="@+id/userName_adminScreen"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminPage_Header" />

    <Button
        android:id="@+id/logout_button_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="10dp" />

    <Button
        android:id="@+id/sign_in_button_signIn_page"
        android:layout_width="147dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName_adminScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>