<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewChallenge">

    <TextView
        android:id="@+id/addChallenge_header"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/add_challenges"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="34dp"
        android:layout_marginTop="40dp"
        />


    <EditText
        android:id="@+id/enterLanguage_bar"
        android:layout_width="248dp"
        android:layout_height="84dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:hint="@string/enter_language_followed_by_course_number_ie_spanish_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addChallenge_header" />

    <Button
        android:id="@+id/Search_Button"
        android:layout_width="104dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/enterLanguage_bar"
        app:layout_constraintTop_toBottomOf="@+id/addChallenge_header" />

    <TextView
        android:id="@+id/Challenges_label"
        android:layout_width="183dp"
        android:layout_height="78dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/challenges"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Search_Button" />

    <Button
        android:id="@+id/button1"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Challenges_label" />



    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_editor_absoluteX="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>