<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainUserInterface">

    <TextView
        android:id="@+id/userName_display_main_interface"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/temporary_username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <ProgressBar
        android:id="@+id/progressBar_main_interface"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar_id" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/userName_display_main_interface"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/progressBar_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/my_overall_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_display_main_interface" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="330dp"
        android:layout_height="184dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_main_interface"
        tools:listitem="@layout/recycler_view_item"
        android:id="@+id/upcoming_tasks_recycler"/>
    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/upcoming_tasks_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_a_challenge"
        android:id="@+id/new_challenge_button"

        />
    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/logout"
        android:id="@+id/logout_button"

        />


</androidx.constraintlayout.widget.ConstraintLayout>